--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
+  <title>Odin Recipes</title>
 </head>
 
 <body>
   <h1>Odin Recipes</h1>
+  <a href="./recipes/ratatouille.html" target="_blank" rel="noopener norefferer">Ratatouille</a>
 </body>
 
 </html>
