--- a/recipes/ratatouille.html
+++ b/recipes/ratatouille.html
@@ -10,6 +10,100 @@
 
 <body>
   <h1>Ratatouille</h1>
+  <img src="../images/ratatouille.jpg" height="500" alt="a picuture of ratatouille">
+
+  <h2>Description</h2>
+  It's a stew of zucchini, peppers, tomatoes and eggplant, with herbs and spices and some onions and garlic usually
+  thrown in for good measure.
+
+  <h2>Ingredients</h2>
+  <h3>veggies</h3>
+  <ul>
+    <li>
+      2 eggplants
+    </li>
+    <li>
+      6 roma tomatoes
+    </li>
+    <li>
+      2 yellow squashes
+    </li>
+    <li>
+      2 zucchinis
+    </li>
+  </ul>
+  <h3>sauce</h3>
+  <ul>
+    <li>
+      2 tablespoons olive oil
+    </li>
+    <li>
+      1 medium white onion, diced
+    </li>
+    <li>
+      4 cloves garlic, minced
+    </li>
+    <li>
+      1 red bell pepper, seeded and diced
+    </li>
+    <li>
+      1 yellow bell pepper, seeded and diced
+    </li>
+    <li>
+      kosher salt, to taste
+    </li>
+    <li>
+      freshly ground black pepper, to taste
+    </li>
+    <li>
+      28 oz crushed tomatoes (785g)
+    </li>
+    <li>
+      2 tablespoons thinly sliced resh basil
+    </li>
+  </ul>
+  <h3>herb seasoning</h3>
+  <ul>
+    <li>
+      2 tablespoons thinly sliced resh basil
+    </li>
+    <li>
+      1 teaspoon minced garlic
+    </li>
+    <li>
+      2 tablespoons finely chopped fresh parsely
+    </li>
+    <li>
+      2 teaspoons fresh thyme leaves
+    </li>
+    <li>
+      kosher salt, to taste
+    </li>
+    <li>
+      freshly ground black pepper, to taste
+    </li>
+    <li>
+      4 tablespoon olive oil
+    </li>
+  </ul>
+  <h2>Steps</h2>
+  <ol>
+    <li>Preheat the oven for 190°C</li>
+    <li>Using a sharp knife or a mandoline, slice the eggplant, tomatoes, squash, and zucchini into approximately
+      1/16-inch (1-mm)-thick rounds, then set aside.</li>
+    <li>Make the sauce: Heat the olive oil in a 12-inch (30-cm) oven-safe pan over medium-high heat. Sauté the onion,
+      garlic, and bell peppers until soft, about 10 minutes. Season with salt and pepper, then add the crushed tomatoes.
+      Stir until the ingredients are fully incorporated. Remove from heat, then add the basil. Stir once more, then
+      smooth the surface of the sauce with a spatula.</li>
+    <li>Arrange the veggies in alternating slices, (for example, eggplant, tomato, squash, zucchini) on top of the
+      sauce, working from the outer edge to the center of the pan. Season with salt and pepper.</li>
+    <li>Make the herb seasoning: In a small bowl, mix together the basil, garlic, parsley, thyme, salt, pepper, and
+      olive oil. Spoon the herb seasoning over the vegetables.</li>
+    <li>Cover the pan with foil and bake for 40 minutes. Uncover, then bake for another 20 minutes, until the vegetables
+      are softened.</li>
+    <li>Serve hot as a main dish or side. The ratatouille is also excellent the next day–cover with foil and reheat in a
+      350˚F (180˚C) oven for 15 minutes, or simply microwave to desired temperature.</li>
+  </ol>
 </body>
 
 </html>
